--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "NopXx",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   }
 }
