--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 
 # cloudinary
-cloud_name=dqolakmsp
-api_key=121623442256535
-api_secret=GNdsVGwZzo59KtXST2TvOkKxlYE
+cloud_name=
+api_key=
+api_secret=
